--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Resume - FolioOne Bootstrap Template</title>
+  <title>Resume - Pudra's Portfolio</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -164,24 +164,6 @@
 
           <!-- Education Section (Below Skills) -->
           <div class="resume-item mt-4" data-aos="fade-up">
-            <h3 class="resume-title">Education</h3>
-
-            <div class="resume-content">
-              <article class="education-item">
-                <h4>Bachelor of International Relation</h4>
-                <h5>2012 - 2016</h5>
-                <p class="institution"><em>Universitas Muhammadiyah Yogyakarta</em></p>
-                <p><em>2015/2016 became chair of film organization at university level - MM Kine Klub UMY</em></p>
-                <p>• Revived an inactive campus film club into a vibrant and active organization.</p>
-                <p>• Built a strong branding strategy through social media, cross-faculty collaborations, and regular events, raising awareness at the university level.</p>
-                <p>• Initiated a structured and effective new member recruitment process.</p>
-                <p>• Organized an annual film appreciation program attended by film communities from Central Java & Yogyakarta, university representatives, and the general public.</p>
-              </article>
-            </div>
-          </div><!-- End Education Section -->
-
-                    <!-- Training and Certification Section (Below Education) -->
-          <div class="resume-item mt-4" data-aos="fade-up">
             <h3 class="resume-title">Training and Certification</h3>
 
             <div class="resume-content">
@@ -194,6 +176,24 @@
                 <h5>2021</h5>
                 <h4>Certified Video Editor by BNSP</h4>
                 <h5>2017</h5>
+              </article>
+            </div>
+          </div><!-- End Education Section -->
+
+                    <!-- Training and Certification Section -->
+          <div class="resume-item mt-4" data-aos="fade-up">
+            <h3 class="resume-title">Education</h3>
+
+            <div class="resume-content">
+              <article class="education-item">
+                <h4>Bachelor of International Relation</h4>
+                <h5>2012 - 2016</h5>
+                <p class="institution"><em>Universitas Muhammadiyah Yogyakarta</em></p>
+                <p><em>2015/2016 became chair of film organization at university level - MM Kine Klub UMY</em></p>
+                <p>• Revived an inactive campus film club into a vibrant and active organization.</p>
+                <p>• Built a strong branding strategy through social media, cross-faculty collaborations, and regular events, raising awareness at the university level.</p>
+                <p>• Initiated a structured and effective new member recruitment process.</p>
+                <p>• Organized an annual film appreciation program attended by film communities from Central Java & Yogyakarta, university representatives, and the general public.</p>
               </article>
             </div>
           </div><!-- End Education Section -->
