--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - FolioOne Bootstrap Template</title>
+  <title>about - Pudra's Portfolio</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -58,8 +58,8 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/pudrafanky/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://id.linkedin.com/in/pudra-fanki-42a60b30a" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -83,9 +83,9 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello there</span>
-              <h2 class="headline">Hi, I'm Pudra - a calm-minded creative designer crafting serene digital journeys</h2>
+              <h2 class="headline">I'm Pudra - a calm-minded creative designer crafting serene digital journeys</h2>
               <p class="lead">
-                A passionate professional with wide experience in the creative field as a graphic designer, video editor, and marketing communication specialist. Proven ability in handling creative projects from organizational branding, managing social media, to redesigning websites for Islamic finance companies.
+                A passionate professional with wide experience in the creative field as a graphic designer, video editor, and marketing communication specialist. Proven ability in handling creative projects from organizational branding, managing social media, to redesigning websites companies.
               </p>
               <p>
                 Creative, initiative-driven, and skilled in combining strategic and technical perspectives to create engaging and impactful content.
@@ -131,7 +131,7 @@
               <div class="skill-item">
                 <i class="bi bi-phone"></i>
                 <h3>Social Media Content</h3>
-                <p>Managed and developed content strategy for company social media, including editorial planning, caption writing, visual design, and performance analysis.</p>
+                <p>Managed and developed content strategy for company social media, including editorial planning, caption writing, visual design.</p>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
@@ -308,7 +308,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="experience-box text-center p-3">
                     <img src="assets/img/Exp/9 Com.webp" alt="Logo 9" class="img-fluid mb-3" style="max-height: 60px;">
-                    <h5 style="color: #fcfcfc; margin-bottom: 0;">9 Communication Event Organization</h5>
+                    <h5 style="color: #fcfcfc; margin-bottom: 0;">9 Communication Event Organizer</h5>
                     <p class="mb-0 text-muted" style="color: #fcfcfc !important;">Videographer</p>
                     <p class="fw-bold">2022 (3 Months Project)</p>
                 </div>
