--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio - FolioOne Bootstrap Template</title>
+  <title>Portfolio - Pudra's Portfolio</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -95,6 +95,7 @@
         <img src="assets/img/portfolio/portfolio-7.webp" alt="Portfolio Item" class="img-fluid">
         <div class="portfolio-overlay">
           <a href="assets/img/portfolio/portfolio-7.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+           <a href="https://www.canva.com/design/DAG2AcZu6-U/Ng5H6KJg4Vcb8Q-4x-i-CA/view?utm_content=DAG2AcZu6-U&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h535238b9b8" class="portfolio-details-link"><i class="bi bi-link"></i></a>
         </div>
       </div>
       <div class="portfolio-info">
@@ -248,10 +249,10 @@
         </div>
       </div>
       <div class="portfolio-info">
-        <h4>Company website</h4>
+        <h4>Design App</h4>
         <div class="portfolio-tags">
           <span>UI / UX</span>
-          <span>Website</span>
+          <span>Application</span>
         </div>
       </div>
     </div>
@@ -271,7 +272,7 @@
       </div>
     </div>
     <div class="portfolio-info">
-      <h4>Motion Graphic Design</h4>
+      <h4>Motion Graphic</h4>
       <div class="portfolio-tags">
         <span>Motion Graphic</span>
         <span>Video Editing</span>
@@ -310,6 +311,8 @@
       <div class="portfolio-overlay">
         <a href="assets/img/portfolio/portfolio-12.webp" class="glightbox portfolio-lightbox">
           <i class="bi bi-plus"></i>
+          <a href="https://bprshikmciyk.co.id/storage/laporan/publikasi/Buku%20Tahunan%20TB%2024.pdf" class="portfolio-details-link">
+          <i class="bi bi-link"></i>
         </a>
       </div>
     </div>
